# focus-ami

./: Cargo.toml  README.md  code_of_conduct.md  here  meson.build
build_aux/: build.sh
src/: annotator.rs  cli.rs  cli_args.rs  comms.rs  config.rs  consts.rs  inter.rs  interact.rs  killer.rs  lib.rs  main.rs  meson.build  user.rs  utils.rs
src/annotator/: mod.rs
src/anotator/: mod.rs
src/config/: completion.rs  history.rs  interact.rs  mod.rs
src/interact/: utils.rs
src/user/: mod.rs
src/utils/: consts.rs  mod.rs
