[package]
name = "focus-ami"
version = "1.0.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/david-soto-m/focus-ami"
categories = ["command-line-utilities"]
keywords = ["productivity", "focus", "command-line-tool"]
description = "A command line tool to help focus by killing processes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "^0.27"
serde = {version = "^1.0", features = ["derive"]}
serde_yaml = "^0.9"
directories = "^4.0"
clap = { version = "^4.0", features = ["derive"] }
dialoguer = { version = "^0.10", features = ["fuzzy-select", "history", "completion"]}
console = "0.15.5"
color-eyre = "0.6.2"

[profile.dev.package.backtrace]
opt-level = 3
